--- a/demo/index.htm
+++ b/demo/index.htm
@@ -1,12 +1,12 @@
 <head>
-	<title>MyLibrary Demo</title>
+	<title>cross-domain-safe-weakmap demo</title>
 </head>
 
 <body>
-  <script src="../dist/mylibrary.js"></script>
+  <script src="../dist/cross-domain-safe-weakmap.js"></script>
 
 	<script>
-      mylibrary.createButton(document.body, 'Click Me', function(event) {
+      xdsweakmap.createButton(document.body, 'Click Me', function(event) {
 				window.alert('Button was clicked!');
 			});
 	</script>
