chore: use prettier

--- a/demo/index.htm
+++ b/demo/index.htm
@@ -1,13 +1,13 @@
 <head>
-	<title>cross-domain-safe-weakmap demo</title>
+  <title>cross-domain-safe-weakmap demo</title>
 </head>
 
 <body>
   <script src="../dist/cross-domain-safe-weakmap.js"></script>
 
-	<script>
-      xdsweakmap.createButton(document.body, 'Click Me', function(event) {
-				window.alert('Button was clicked!');
-			});
-	</script>
+  <script>
+    xdsweakmap.createButton(document.body, "Click Me", function (event) {
+      window.alert("Button was clicked!");
+    });
+  </script>
 </body>
